--- a/index.html
+++ b/index.html
@@ -21,11 +21,25 @@ Porro repellendus reprehenderit quidem soluta esse nam ducimus ea repellat dolor
 Nemo atque, eligendi molestias blanditiis, <div> <strong> div tagi cümle içerisinde kullanilsa bile bir alt satira iner ve tamamini kapsar </strong> </div> tempore necessitatibus officia facilis perspiciatis laborum cum doloremque, deserunt aliquid debitis quam. Doloribus distinctio sit assumenda consectetur repellat sapiente, officia sint eos dolores, illo laboriosam.
 Accusamus deleniti quo magni distinctio <span> <strong> span tagi ise bulundugu alani kapsar bir alt satira inmez </strong> </span> sequi veniam ab odit. Eaque sequi unde nostrum voluptates rem cum beatae reprehenderit ullam aliquid perferendis, a corporis illo sapiente debitis quam quae eum et!</p>
 
+<div>Dokunulmasa da, görülmese de;</div>
+<div>Kalpte yer verilir bazisina,</div>
+<div>Nedensiz...</div>
+<div>Sen; aklim ve kalbim arasinda kalan,</div>
+<div>En güzel çaresizliğimsin.</div>
+<div>Gerçi aklima bile gelmiyorsun artik.</div>
+<div>O kadar kalbimdesin ki...</div>
+<div>Gözlerinin kahvesinden koy ömrüme,</div>
+<div>Kirk yilin hatirina "SEN" kalayim.</div>
+<div>"Sevmek" ne uzun kelime...</div>
+<div>Şimdi açsam pencereyi beklesem.</div>
+<div>Sen gelsen, olmaz ya hani geliversen.</div>
+<div>Hiçbir şey sormasan,</div>
+<div>Hiçbir şey söylemesen,</div>
+<div>Sussan,</div>
+<div>Sussam,</div>
+<div>Sussak...</div>
+<div>Susuşlarin anlattiklarini dinlesek.</div>
+<div>CEMAL SÜREYA</div>
 
-
-
-
-
-    
 </body>
 </html>
