--- a/index.html
+++ b/index.html
@@ -3,43 +3,61 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Resume</title>
+    <title>Resumem</title>
 </head>
 <body>
-
-<!-- yorum satırı Shift + ALT + A ile otomatik olarak yapılabiliyor -->
-<h1> <strong><i><u>CV HAZIRLAMA</u></i></strong> </h1>
-<hr>
-<h2>CV ORNEGI</h2>
-<p> <hr> MY CV <hr></p>
-<p>Lorem ipsum dolor sit amet <strong>consectetur</strong> adipisicing elit. Exercitationem fuga earum, dolorem sint perferendis perspiciatis eveniet voluptates. Reprehenderit, fuga itaque? Dolor commodi beatae quam facere eum at accusantium similique aliquam?
-</p>
-<p>Lorem, ipsum <strong><i>dolor</i></strong> sit amet consectetur adipisicing elit. Quaerat facilis doloremque cupiditate sint delectus illum amet, adipisci natus ut, iste esse qui, tempore debitis dolor nobis officiis quam mollitia. Minus.
-Soluta ab quas, dicta nam porro illo molestiae sapiente atque ea excepturi consectetur hic eum deserunt perferendis corporis numquam voluptas, pariatur doloremque maiores corrupti? <br>
-Facere facilis aspernatur ullam molestiae error!
-Porro repellendus reprehenderit quidem soluta esse nam ducimus ea repellat doloremque illo beatae possimus ex quia veniam ratione reiciendis omnis, dignissimos quaerat autem. Nisi reprehenderit voluptatem, impedit perferendis dicta itaque.
-Nemo atque, eligendi molestias blanditiis, <div> <strong> div tagi cümle içerisinde kullanilsa bile bir alt satira iner ve tamamini kapsar </strong> </div> tempore necessitatibus officia facilis perspiciatis laborum cum doloremque, deserunt aliquid debitis quam. Doloribus distinctio sit assumenda consectetur repellat sapiente, officia sint eos dolores, illo laboriosam.
-Accusamus deleniti quo magni distinctio <span> <strong> span tagi ise bulundugu alani kapsar bir alt satira inmez </strong> </span> sequi veniam ab odit. Eaque sequi unde nostrum voluptates rem cum beatae reprehenderit ullam aliquid perferendis, a corporis illo sapiente debitis quam quae eum et!</p>
-
-<div>Dokunulmasa da, görülmese de;</div>
-<div>Kalpte yer verilir bazisina,</div>
-<div>Nedensiz...</div>
-<div>Sen; aklim ve kalbim arasinda kalan,</div>
-<div>En güzel çaresizliğimsin.</div>
-<div>Gerçi aklima bile gelmiyorsun artik.</div>
-<div>O kadar kalbimdesin ki...</div>
-<div>Gözlerinin kahvesinden koy ömrüme,</div>
-<div>Kirk yilin hatirina "SEN" kalayim.</div>
-<div>"Sevmek" ne uzun kelime...</div>
-<div>Şimdi açsam pencereyi beklesem.</div>
-<div>Sen gelsen, olmaz ya hani geliversen.</div>
-<div>Hiçbir şey sormasan,</div>
-<div>Hiçbir şey söylemesen,</div>
-<div>Sussan,</div>
-<div>Sussam,</div>
-<div>Sussak...</div>
-<div>Susuşlarin anlattiklarini dinlesek.</div>
-<div>CEMAL SÜREYA</div>
-
+    <div class="header">
+        <div class="title">
+            <h2>JOHN DOE</h2>
+            <i>Software Test Engineer</i>
+        </div>
+        <div class="menu">
+            <a href="index.html">Home</a> | 
+            <a href="resume.html">Resume</a> |
+            <a href="contact.html">Contact</a>
+        </div>
+    </div>
+    <div class="content">
+        <div class="about">
+            <div class="myPhoto">
+                <img src="img/pexels-moose-photos-1586996.jpg" alt="My Photo" />
+            </div>
+            <div class="description">
+                <h1>Canim Kendim</h1>
+                <p>
+                    I'm a web developer with 7 years of experience in designing and
+                    developing user interfaces, testing, debugging and training staff
+                    within eCommerce technologies. Proven ability in optimizing web
+                    functionalities that improve data retrieval and workflow
+                    efficiencies.
+                </p>
+                   <div class="toolbar">
+                     <a href="resume.html">Resume</a> |
+                     <a href="contact.html">Contact</a>
+                   </div>
+            </div>
+        </div>
+    </div>
+    <div class="footer">
+        <div>
+            <h3>Telefon</h3>
+            <a href="tel:+123123123">call me</a>
+        </div>
+        <div>
+            <h3>Email</h3>
+            <a href="mailto:resume@gmail.com">mail me</a>
+        </div>
+        <div>
+            <h3>Sosyal Medya</h3>
+            <a href="http://twitter.com" target="_blank" rel="noopener noreferrer" >Twitter</a> |
+            <a href="http://facebook.com" target="_blank" rel="noopener noreferrer">Facebook</a> |
+            <a href="http://linkedin.com" target="_blank" rel="noopener noreferrer">Linkedin</a>
+        </div>
+        <div>
+            <h3>Copy Right</h3>
+            <p>2023 - Bana aittir</p>
+        
+        </div>
+    </div>
 </body>
 </html>
