--- a/contact.html
+++ b/contact.html
@@ -19,10 +19,25 @@
     </div>
     <div class="content"></div>
     <div class="footer">
-        <div><h3>Telefon</h3></div>
-        <div><h3>Email</h3></div>
-        <div><h3>Sosyal Medya</h3></div>
-        <div><h3>Copy Right</h3></div>
+        <div>
+            <h3>Telefon</h3>
+            <a href="tel:+123123123">call me</a>
+        </div>
+        <div>
+            <h3>Email</h3>
+            <a href="mailto:resume@gmail.com">mail me</a>
+        </div>
+        <div>
+            <h3>Sosyal Medya</h3>
+            <a href="http://twitter.com" target="_blank" rel="noopener noreferrer" >Twitter</a> |
+            <a href="http://facebook.com" target="_blank" rel="noopener noreferrer">Facebook</a> |
+            <a href="http://linkedin.com" target="_blank" rel="noopener noreferrer">Linkedin</a>
+        </div>
+        <div>
+            <h3>Copy Right</h3>
+            <p>2023 - Bana aittir</p>
+        
+        </div>
     </div>
 </body>
 </html>
