--- a/resume.html
+++ b/resume.html
@@ -17,12 +17,79 @@
             <a href="contact.html">Contact</a>
         </div>
     </div>
-    <div class="content"></div>
+    <div class="content">
+        <h1>Resume</h1>
+        <div class="section">
+            <h2>Work Experience</h2>
+            <div class="card">
+                <div class="left">
+                    <h2>X Technologies</h2>
+                    <i>Automation Engineer | 2020 | Present</i>
+                </div>
+                <div class="right">
+                    Designed and developed user friendly website, including optimzed
+                    check-out page that increased user clicks and subsequently customer
+                    purchases by 20%
+                </div>
+            </div>
+            <div class="card">
+                <div class="left">
+                    <h2>Y Solutions</h2>
+                    <i>Manuel Tester | 2018 | 2020</i>
+                </div>
+                <div class="right">
+                    Implemented server that expedited document generation and search
+                    functionality by 20%, earning commendation and award from upper
+                    management
+                </div>
+            </div>
+        </div>
+        <div class="section">
+            <h2>Education</h2>
+            <div class="card">
+                <div class="left">
+                    <h2>Q University</h2>
+                    <i>Master Degree | 2016 - 2018</i>
+                </div>
+                <div class="right">
+                    Designed and developed user friendly website, including optimzed
+                    check-out page that increased user clicks and subsequently customer
+                    purchases by 20%
+                </div>
+            </div>
+            <div class="card">
+                <div class="left">
+                    <h2>M University</h2>
+                    <i>Bachelor Degree | 2012 - 2016</i>
+                </div>
+                <div class="right">
+                    Implemented server that expedited document generation and search
+                    functionality by 20%, earning commendation and award from upper
+                    management
+                </div>
+            </div>
+        </div>
+    </div>
     <div class="footer">
-        <div><h3>Telefon</h3></div>
-        <div><h3>Email</h3></div>
-        <div><h3>Sosyal Medya</h3></div>
-        <div><h3>Copy Right</h3></div>
+        <div>
+            <h3>Telefon</h3>
+            <a href="tel:+123123123">call me</a>
+        </div>
+        <div>
+            <h3>Email</h3>
+            <a href="mailto:resume@gmail.com">mail me</a>
+        </div>
+        <div>
+            <h3>Sosyal Medya</h3>
+            <a href="http://twitter.com" target="_blank" rel="noopener noreferrer" >Twitter</a> |
+            <a href="http://facebook.com" target="_blank" rel="noopener noreferrer">Facebook</a> |
+            <a href="http://linkedin.com" target="_blank" rel="noopener noreferrer">Linkedin</a>
+        </div>
+        <div>
+            <h3>Copy Right</h3>
+            <p>2023 - Bana aittir</p>
+        
+        </div>
     </div>
 </body>
 </html>
