--- a/test.html
+++ b/test.html
@@ -41,5 +41,44 @@ Accusamus deleniti quo magni distinctio <span> <strong> span tagi ise bulundugu 
 <div>Susuşlarin anlattiklarini dinlesek.</div>
 <div>CEMAL SÜREYA</div>
 
+<form action="">
+    <input type="text">
+    <input type="button" value="Kaydet">
+    <input type="password">
+  
+  <br>
+
+  <input type="checkbox" name="hobiler" id="">Futbol
+  <input type="checkbox" name="hobiler" id="">Basketbol
+  <input type="checkbox" name="hobiler" id="">Voleybol
+
+    <br>
+
+  <input type="radio" name="cinsiyet" id=""> Kadin 
+  <input type="radio" name="cinsiyet" id=""> Erkek
+
+    <br>
+  <input type="radio" name="egitim" id=""> Ilkokul 
+  <input type="radio" name="egitim" id=""> Lise
+  <input type="radio" name="egitim" id=""> Universite 
+  <input type="radio" name="egitim" id=""> Yuksek Lisans
+
+  <br>
+  <label for="">Ili secin</label>
+  <select name="iller" id="">
+    
+    <option value="01">Adana</option>
+    <option value="02">Adiyaman</option>
+    <option value="03">Afyon</option>
+    <option value="04">Agri</option>
+  </select>
+  
+  <br>
+
+  <textarea name="mesaj" id="" cols="30" rows="10"></textarea>
+
+
+  </form>
+
 </body>
 </html>
