--- a/test.html
+++ b/test.html
@@ -8,7 +8,7 @@
 <body>
 
 <!-- yorum satırı Shift + ALT + A ile otomatik olarak yapılabiliyor -->
-<h1> <strong><i><u>CV HAZIRLAMA</u></i></strong> </h1>
+<h1  style="color: rgb(223, 78, 16); font-size: 50px; background-color: rgb(231, 153, 119) ;"> <strong><i><u>CV HAZIRLAMA</u></i></strong> </h1>
 <hr>
 <h2>CV ORNEGI</h2>
 <p> <hr> MY CV <hr></p>
