--- a/contact.html
+++ b/contact.html
@@ -17,7 +17,39 @@
             <a href="contact.html">Contact</a>
         </div>
     </div>
-    <div class="content"></div>
+    <div class="content">
+        <h1>Contact</h1>
+        <div class="section">
+          <div class="card">
+            <div class="left">
+              <form action="">
+                <div class="form-row">
+                  <div><label for="firstName">First Name</label></div>
+                  <input type="text" name="firstName" id="firstName" />
+                </div>
+                <div class="form-row">
+                  <div><label for="lastName">Last Name</label></div>
+                  <input type="text" name="lastName" id="lastName" />
+                </div>
+                <div class="form-row">
+                  <div><label for="email">E-mail</label></div>
+                  <input type="text" name="email" id="email" />
+                </div>
+                <div class="form-row">
+                  <div><label for="message">Message</label></div>
+                  <textarea
+                    name="message"
+                    id="message"
+                    cols="20"
+                    rows="5"
+                  ></textarea>
+                </div>
+                <button type="submit">SEND</button>
+              </form>
+            </div>
+          </div>
+        </div>
+    </div>
     <div class="footer">
         <div>
             <h3>Telefon</h3>
